[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Elevator/elevator.png" type="Texture" id=1]
[ext_resource path="res://scenes/Elevator/Elevator.gd" type="Script" id=2]
[ext_resource path="res://scenes/InfoAreas/InfoArea.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 23 )

[node name="Elevator" type="StaticBody2D" groups=[
"ElevatorGroup",
]]
z_index = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20, -36 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 7, -72, 33, -72, 40, -65, 40, 0, 31, 0, 31, -48, 9, -48, 9, -16, 0, -16, 0, -65 )

[node name="InfoArea" parent="." instance=ExtResource( 3 )]

[node name="ActivateArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateArea"]
position = Vector2( 20, -24 )
shape = SubResource( 1 )
[connection signal="body_entered" from="ActivateArea" to="." method="_on_ActivateArea_body_entered"]
[connection signal="body_exited" from="ActivateArea" to="." method="_on_ActivateArea_body_exited"]
